<resources>
    <string name="app_name">Habit-Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminders">Reminders</string>
    <string name="activities">Activities</string>
    <string name="home">Home</string>
    <string name="insights">Insights\n</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome!</string>
    <string name="enter_your_credentials_to_login">Enter your credentials to login</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign Up Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="SignUpPassword">Password</string>
    <string name="email">Email</string>
    <string name="SignUpUsername">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="already_have_an_account_log_in">Already have an account? Sign in.</string>
    <string name="MainPagelogin">Login</string>
    <string name="main_page_sign_up">Sign Up</string>
    <string name="habithelper">HabitHelper</string>
    <string name="Habithelper">Habit Helper</string>
    <string name="home_welcome_back">Welcome Back!</string>
    <string name="steps">Steps</string>
    <string name="sleep">Sleep</string>
    <string name="today_s_goals">Today\'s Goals</string>
    <string name="water">Water</string>
    <string name="calories">Calories</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="no_activities_to_display">No activities to display</string>
    <string name="your_activities">Your Activities:</string>
    <string name="task">Task: </string>
    <string name="add_new">Add New</string>
    <string name="activity_name">Activity Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="color_label_prompt">Select Color Label</string>
    <string name="account_information">Account Information</string>
    <string name="Accountusername">Username</string>
    <string name="Accountemail">Email</string>
    <string name="Accountpassword">Password</string>
    <string name="reset_password">Reset </string>
    <string name="health_stats">Health Stats</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="Accountsave">Save</string>
    <string name="Activity_name">Activity Name</string>
    <string name="Activity_description">Activity Description</string>
    <string name="Color_label">Color Label</string>
    <string name="task_name">Task Name</string>
    <string name="task_date_yyyy_mm_dd">Task Date (YYYY-MM-DD)</string>
    <string name="Tasksave">Save</string>
    <string name="enter_description">Enter Description</string>
    <string name="completed">Completed</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="Goalsave">Save</string>
    <string name="enter_goal_name">Enter Goal Name</string>
    <string name="add_goal">Add Goal</string>
    <string name="resetemail">Email</string>
    <string name="Reset_password">Reset Password</string>
    <string name="emaillabel">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="new_password">New Password:</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="reset_passwordb">Reset Password</string>
    <string name="Profileusername">Username:</string>
    <string name="Profileemail">Email</string>
    <string name="Profilepassword">Password</string>
    <string name="Profileweight">Weight</string>
    <string name="Profileheight">Height</string>
    <string name="Profilesave">Save</string>
    <string name="profilesettings">profileSettings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_goals">Your Goals:</string>
    <string name="collapse">Collapse</string>
    <string name="delete_button_description">Delete</string>
    <string name="your_recomendations">Recommendations</string>
    <string name="Activitycollapse">Collapse</string>
    <string name="acollapse">Collapse</string>
    <string name="welcome">Welcome!</string>


</resources>