<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <!-- Account Information Section -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="421dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:title="Edit Account" />


    <TextView
        android:id="@+id/textViewAccountInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_information"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Accountusername"
        android:minHeight="48dp"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Accountemail"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Accountpassword"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <!-- Save Button -->

    <!-- Health Stats Section -->


    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/textViewHealthStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/health_stats"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/weight"
        android:minHeight="48dp"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/height"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints=""
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Accountsave"
        android:layout_marginStart="290dp"
        android:layout_marginTop="0dp"/>

    <!-- Delete Account Section -->
    <Button
        android:id="@+id/buttonDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:text="@string/delete_account" />





</LinearLayout>
