<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:title="Profile settings" />

    <TextView
        android:id="@+id/textViewAccountInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_information"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextProfileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Profileusername"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


    <EditText
        android:id="@+id/editTextProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Profileemail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextProfilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Profilepassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/textViewHealthStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/health_stats"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"/>


    <EditText
        android:id="@+id/editTextProfileWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Profileweight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/editTextProfileHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Profileheight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/buttonEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:layout_marginStart="300dp"
        />

    <!-- Placeholder for space at the bottom -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
