<?xml version="1.0" encoding="utf-8"?>
<!-- item_activity.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/activityNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activityDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity_description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/colorLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Color_label"
        android:textSize="16sp" />

</LinearLayout>
