<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_activity.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingClass">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            app:title="Activities"
            android:paddingBottom="0dp"/>

        <com.example.habit_helper.PieChartView
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="230dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_activities"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/black"/>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:paddingBottom="20dp"
                android:scrollbars="vertical"
                android:clickable="true"
                tools:ignore="TextSizeCheck"
                android:focusable="true" />


        <!-- Button to Add New Activity -->
        <TextView
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_activities_to_display"
            android:gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/addActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="100dp"
            android:background="@color/black"
            android:text="@string/add_new_activity" />

        <Button
            android:id="@+id/collapseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            android:text="@string/acollapse"
            android:visibility="gone"/>


    </LinearLayout>
</ScrollView>


